@@ -16,16 +16,19 @@
 #ifndef GEOS_GEOM_GEOMETRYFACTORY_H
 #define GEOS_GEOM_GEOMETRYFACTORY_H
 
+#include <geos/geom/CoordinateSequence.h>
+#include <geos/geom/Geometry.h>
 #include <geos/inline.h>
+
 #include <vector>
 
 namespace geos {
 	namespace geom { 
 		class CoordinateSequenceFactory;
 		class Coordinate;
-		class CoordinateSequence;
+		//class CoordinateSequence;
 		class Envelope;
-		class Geometry;
+		//class Geometry;
 		class GeometryCollection;
 		class LineString;
 		class LinearRing;
@@ -186,6 +189,9 @@ public:
 	/// Construct a LinearRing taking ownership of given arguments
 	LinearRing* createLinearRing(CoordinateSequence* newCoords) const;
 
+	Geometry::AutoPtr createLinearRing(
+			CoordinateSequence::AutoPtr newCoords) const;
+
 	/// Construct a LinearRing with a deep-copy of given arguments
 	LinearRing* createLinearRing(
 			const CoordinateSequence& coordinates) const;
@@ -222,6 +228,9 @@ public:
 
 	/// Construct a LineString taking ownership of given argument
 	LineString* createLineString(CoordinateSequence* coordinates) const;
+
+	Geometry::AutoPtr createLineString(
+			CoordinateSequence::AutoPtr coordinates) const;
 
 	/// Construct a LineString with a deep-copy of given argument
 	LineString* createLineString(
@@ -299,6 +308,9 @@ private:
 
 /**********************************************************************
  * $Log$
+ * Revision 1.7  2006/04/11 11:16:25  strk
+ * Added LineString and LinearRing constructors by auto_ptr
+ *
  * Revision 1.6  2006/04/10 13:09:49  strk
  * Added GeometryFactory::defaultInstance()
  * Made Geometry::INTERNAL_GEOMETRY_FACTORY an alias for it
